<?xml version="1.0"?>
<package>
  <name>calibrate_gui</name>
  <version>0.1.0</version>
  <description>

     calibrate_gui

  </description>
  <maintainer email="drchrislewis@gmail.com">Chris Lewis</maintainer>
  <author>Chris Lewis</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>industrial_extrinsic_cal</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>industrial_extrinsic_cal</run_depend>

</package>
